[package]
name = "quo-rust"
description = "Companion package for the Quo debugger."
version = "0.1.2"
edition = "2021"
authors = ["Protoqol <open-source@protoqol.nl"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/Protoqol/Quo-rust"
keywords = ["quo", "debug", "debugging"]
categories = ["development-tools", "development-tools::debugging", "development-tools::testing"]
exclude = [
    ".github/**/*"
]

[dependencies]
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
