[package]
name = "quo-rust"
description = "Companion package for the Quo debugger."
version = "0.1.5"
edition = "2021"
authors = ["Protoqol <open-source@protoqol.nl"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/Protoqol/Quo-rust"
keywords = ["quo", "debug", "debugging"]
categories = ["development-tools", "development-tools::debugging", "development-tools::testing"]
exclude = [
    ".github/**/*"
]

[dependencies]
ureq = { version = "3", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.70"

[dev-dependencies]
httpmock = "0.8.3"