[package]
name = "quo-rust"
description = "Companion package for the Quo debugger."
version = "0.1.7"
edition = "2021"
authors = ["Protoqol <open-source@protoqol.nl"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/Protoqol/Quo-rust"
keywords = ["quo", "debug", "debugging"]
categories = ["development-tools", "development-tools::debugging", "development-tools::testing"]
exclude = [
    ".github/**/*"
]

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["wasmbind"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-test = "0.3.43"
ehttp = { version = "0.6.0", features = ["json"] }
serde-json-wasm = "1.0.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
ureq = { version = "3", default-features = false, features = ["json"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
httpmock = "0.8.3"